[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/skull_levels/Skull_level_2.gd" type="Script" id=1]
[ext_resource path="res://entities/eye creature/skull/Skull.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/common/assets/grass_and_stone/green_grey/green_grey.tres" type="TileSet" id=3]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/skull_levels/midnight parallax/MidnightParallax.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/popupDialog/PopupDialog.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 128 )

[node name="Skull_level_2" type="Node2D"]
script = ExtResource( 1 )

[node name="Skull" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 224 )

[node name="AnimatedSprite" parent="Skull/KinematicBody2D" index="0"]
frame = 3

[node name="Area2D" parent="Skull" index="1"]
position = Vector2( 0, -27 )

[node name="CollisionShape2D2" parent="Skull/Area2D" index="0"]
position = Vector2( 0, 3 )

[node name="Dirt" type="TileMap" parent="."]
modulate = Color( 0.627451, 0.619608, 0.87451, 1 )
position = Vector2( 0, 224 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -917463, 27, 0, -851927, 27, 0, -786391, 27, 0, -720855, 27, 0, -655319, 27, 0, -589783, 27, 0, -524247, 27, 0, -458711, 27, 0, -393175, 27, 0, -327639, 27, 0, -262103, 27, 0, -131073, 27, 0, -196567, 27, 0, -65537, 27, 0, -131031, 27, 0, -1, 27, 0, -65495, 27, 0, 65535, 27, 0, 41, 27, 0, 131071, 27, 0, 65577, 27, 0, 196607, 27, 0, 131092, 41, 0, 131093, 41, 0, 131094, 41, 0, 131095, 41, 0, 131096, 41, 0, 131097, 41, 0, 131098, 41, 0, 131099, 41, 0, 131100, 41, 0, 131101, 41, 0, 131102, 41, 0, 131103, 41, 0, 131104, 41, 0, 131105, 41, 0, 131106, 41, 0, 131107, 41, 0, 131108, 41, 0, 131109, 41, 0, 131110, 41, 0, 131111, 41, 0, 131112, 41, 0, 131113, 41, 0, 262143, 27, 0, 196628, 9, 0, 196629, 34, 0, 196630, 34, 0, 196631, 34, 0, 196632, 34, 0, 196633, 34, 0, 196634, 34, 0, 196635, 34, 0, 196636, 34, 0, 196637, 34, 0, 196638, 34, 0, 196639, 34, 0, 196640, 34, 0, 196641, 34, 0, 196642, 34, 0, 196643, 34, 0, 196644, 34, 0, 196645, 34, 0, 196646, 34, 0, 196647, 34, 0, 196648, 34, 0, 196649, 34, 0, 327679, 27, 0, 262164, 10, 0, 262165, 27, 0, 262166, 27, 0, 262167, 27, 0, 262168, 27, 0, 262169, 27, 0, 262170, 27, 0, 262171, 27, 0, 262172, 27, 0, 262173, 27, 0, 262174, 27, 0, 262175, 27, 0, 262176, 27, 0, 262177, 27, 0, 262178, 27, 0, 262179, 26, 0, 262180, 27, 0, 262181, 27, 0, 262182, 27, 0, 262183, 27, 0, 262184, 27, 0, 262185, 27, 0, 393215, 27, 0, 327687, 41, 0, 327688, 41, 0, 327689, 41, 0, 327690, 41, 0, 327700, 10, 0, 327701, 27, 0, 327702, 27, 0, 327703, 27, 0, 327704, 27, 0, 327705, 27, 0, 327706, 27, 0, 327707, 26, 0, 327708, 27, 0, 327709, 27, 0, 327710, 27, 0, 327711, 27, 0, 327712, 27, 0, 327713, 27, 0, 327714, 27, 0, 327715, 27, 0, 327716, 27, 0, 327717, 27, 0, 327718, 27, 0, 327719, 27, 0, 327720, 27, 0, 327721, 27, 0, 458751, 27, 0, 393223, 9, 0, 393224, 34, 0, 393225, 27, 0, 393226, 35, 0, 393236, 10, 0, 393237, 27, 0, 393238, 25, 0, 393239, 27, 0, 393240, 27, 0, 393241, 27, 0, 393242, 27, 0, 393243, 27, 0, 393244, 27, 0, 393245, 27, 0, 393246, 1610612761, 0, 393247, 27, 0, 393248, 27, 0, 393249, 27, 0, 393250, 27, 0, 393251, 27, 0, 393252, 27, 0, 393253, 27, 0, 393254, 25, 0, 393255, 27, 0, 393256, 27, 0, 393257, 27, 0, 524287, 27, 0, 458759, 10, 0, 458760, -1610612711, 0, 458761, 27, 0, 458762, 28, 0, 458772, 10, 0, 458773, 27, 0, 458774, 27, 0, 458775, 27, 0, 458776, 27, 0, 458777, 27, 0, 458778, 27, 0, 458779, 27, 0, 458780, 27, 0, 458781, 27, 0, 458782, 27, 0, 458783, 27, 0, 458784, 27, 0, 458785, 27, 0, 458786, 27, 0, 458787, 27, 0, 458788, 27, 0, 458789, 27, 0, 458790, 27, 0, 458791, 27, 0, 458792, 27, 0, 458793, 27, 0, 589823, 27, 0, 524295, 10, 0, 524296, 27, 0, 524297, 27, 0, 524298, 28, 0, 524308, 10, 0, 524309, 27, 0, 524310, 27, 0, 524311, 27, 0, 524312, 27, 0, 524313, 27, 0, 524314, 27, 0, 524315, 27, 0, 524316, 27, 0, 524317, 27, 0, 524318, 27, 0, 524319, 27, 0, 524320, 27, 0, 524321, 27, 0, 524322, 27, 0, 524323, 27, 0, 524324, 27, 0, 524325, 27, 0, 524326, 27, 0, 524327, 27, 0, 524328, 27, 0, 524329, 27, 0, 655359, 27, 0, 589831, 10, 0, 589832, 27, 0, 589833, 27, 0, 589834, 28, 0, 589844, 10, 0, 589845, 27, 0, 589846, 27, 0, 589847, 27, 0, 589848, 27, 0, 589849, 27, 0, 589850, 27, 0, 589851, 27, 0, 589852, 25, 0, 589853, 27, 0, 589854, 27, 0, 589855, 27, 0, 589856, 27, 0, 589857, 27, 0, 589858, 27, 0, 589859, 27, 0, 589860, 27, 0, 589861, 26, 0, 589862, 27, 0, 589863, 27, 0, 589864, 27, 0, 589865, 27, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 41, 0, 655364, 41, 0, 655365, 41, 0, 655366, 41, 0, 655367, -1073741790, 0, 655368, 27, 0, 655369, -1073741799, 0, 655370, -1610612702, 0, 655371, 42, 0, 655372, 42, 0, 655373, 42, 0, 655374, 42, 0, 655375, 42, 0, 655376, 42, 0, 655377, 42, 0, 655378, 42, 0, 655379, 42, 0, 655380, 10, 0, 655381, 27, 0, 655382, 27, 0, 655383, 27, 0, 655384, 27, 0, 655385, 27, 0, 655386, 27, 0, 655387, 27, 0, 655388, 27, 0, 655389, 27, 0, 655390, 27, 0, 655391, 27, 0, 655392, 27, 0, 655393, 27, 0, 655394, 26, 0, 655395, 27, 0, 655396, 27, 0, 655397, 27, 0, 655398, 27, 0, 655399, 27, 0, 655400, 27, 0, 655401, 27, 0, 720896, 34, 0, 720897, 34, 0, 720898, 34, 0, 720899, 34, 0, 720900, 34, 0, 720901, 34, 0, 720902, 34, 0, 720903, 27, 0, 720904, 27, 0, 720905, 27, 0, 720906, 27, 0, 720907, 34, 0, 720908, 34, 0, 720909, 34, 0, 720910, 34, 0, 720911, 34, 0, 720912, 34, 0, 720913, 34, 0, 720914, 34, 0, 720915, 34, 0, 720916, 27, 0, 720917, 27, 0, 720918, 27, 0, 720919, 27, 0, 720920, 27, 0, 720921, 27, 0, 720922, 27, 0, 720923, 27, 0, 720924, 27, 0, 720925, 27, 0, 720926, 27, 0, 720927, 27, 0, 720928, 27, 0, 720929, 27, 0, 720930, 27, 0, 720931, 27, 0, 720932, 27, 0, 720933, 27, 0, 720934, 27, 0, 720935, 27, 0, 720936, 27, 0, 720937, 27, 0, 786432, 1610612762, 0, 786433, 27, 0, 786434, 27, 0, 786435, 27, 0, 786436, 27, 0, 786437, -1073741800, 0, 786438, 27, 0, 786439, 27, 0, 786440, 27, 0, 786441, 27, 0, 786442, 27, 0, 786443, 27, 0, 786444, 27, 0, 786445, 27, 0, 786446, 27, 0, 786447, 27, 0, 786448, 27, 0, 786449, 27, 0, 786450, 27, 0, 786451, 27, 0, 786452, 27, 0, 786453, -1610612712, 0, 786454, 27, 0, 786455, 27, 0, 786456, 27, 0, 786457, 27, 0, 786458, 27, 0, 786459, 27, 0, 786460, -1610612712, 0, 786461, 27, 0, 786462, 27, 0, 786463, 27, 0, 786464, 27, 0, 786465, 27, 0, 786466, 27, 0, 786467, 27, 0, 786468, 27, 0, 786469, 27, 0, 786470, 27, 0, 786471, 27, 0, 786472, 27, 0, 786473, 27, 0, 851968, 27, 0, 851969, 27, 0, 851970, 27, 0, 851971, 27, 0, 851972, 27, 0, 851973, 27, 0, 851974, 27, 0, 851975, 27, 0, 851976, 27, 0, 851977, 1610612761, 0, 851978, 27, 0, 851979, 27, 0, 851980, 27, 0, 851981, 27, 0, 851982, 27, 0, 851983, 27, 0, 851984, 27, 0, 851985, 27, 0, 851986, 27, 0, 851987, 27, 0, 851988, 27, 0, 851989, 27, 0, 851990, 27, 0, 851991, 27, 0, 851992, 27, 0, 851993, 27, 0, 851994, 27, 0, 851995, 27, 0, 851996, 27, 0, 851997, 27, 0, 851998, 27, 0, 851999, 27, 0, 852000, 27, 0, 852001, 27, 0, 852002, 27, 0, 852003, 27, 0, 852004, 27, 0, 852005, 27, 0, 852006, 27, 0, 852007, 27, 0, 852008, 27, 0, 852009, 27, 0, 917504, 27, 0, 917505, 27, 0, 917506, 27, 0, 917507, 27, 0, 917508, 27, 0, 917509, 27, 0, 917510, 27, 0, 917511, 27, 0, 917512, 27, 0, 917513, 27, 0, 917514, 27, 0, 917515, 27, 0, 917516, 27, 0, 917517, 27, 0, 917518, 27, 0, 917519, 27, 0, 917520, 27, 0, 917521, 27, 0, 917522, 27, 0, 917523, 27, 0, 917524, 27, 0, 917525, 27, 0, 917526, 27, 0, 917527, 27, 0, 917528, 27, 0, 917529, 27, 0, 917530, 27, 0, 917531, 27, 0, 917532, 27, 0, 917533, 27, 0, 917534, 27, 0, 917535, 27, 0, 917536, 27, 0, 917537, 27, 0, 917538, 27, 0, 917539, 27, 0, 917540, 27, 0, 917541, 27, 0, 917542, 27, 0, 917543, 27, 0, 917544, 27, 0, 917545, 27, 0, 983040, 27, 0, 983041, 1610612762, 0, 983042, 27, 0, 983043, 27, 0, 983044, 27, 0, 983045, 27, 0, 983046, 27, 0, 983047, 27, 0, 983048, 27, 0, 983049, 27, 0, 983050, 27, 0, 983051, 27, 0, 983052, 27, 0, 983053, 27, 0, 983054, 27, 0, 983055, 27, 0, 983056, 27, 0, 983057, 1610612761, 0, 983058, 27, 0, 983059, 27, 0, 983060, 27, 0, 983061, 27, 0, 983062, 27, 0, 983063, 27, 0, 983064, 27, 0, 983065, 27, 0, 983066, 27, 0, 983067, 27, 0, 983068, 27, 0, 983069, 27, 0, 983070, 1610612761, 0, 983071, 27, 0, 983072, 27, 0, 983073, 27, 0, 983074, 27, 0, 983075, 27, 0, 983076, 27, 0, 983077, 27, 0, 983078, 27, 0, 983079, 27, 0, 983080, 27, 0, 983081, 27, 0, 1048576, 27, 0, 1048577, 27, 0, 1048578, 27, 0, 1048579, 27, 0, 1048580, 27, 0, 1048581, 27, 0, 1048582, 27, 0, 1048583, 25, 0, 1048584, 27, 0, 1048585, 27, 0, 1048586, 27, 0, 1048587, 27, 0, 1048588, 27, 0, 1048589, 27, 0, 1048590, 27, 0, 1048591, 27, 0, 1048592, 27, 0, 1048593, 27, 0, 1048594, 27, 0, 1048595, 27, 0, 1048596, 27, 0, 1048597, 27, 0, 1048598, 27, 0, 1048599, 27, 0, 1048600, 27, 0, 1048601, 27, 0, 1048602, 27, 0, 1048603, 27, 0, 1048604, 27, 0, 1048605, 27, 0, 1048606, 27, 0, 1048607, 27, 0, 1048608, 27, 0, 1048609, 27, 0, 1048610, 27, 0, 1048611, 27, 0, 1048612, 25, 0, 1048613, 27, 0, 1048614, 27, 0, 1048615, 27, 0, 1048616, 27, 0, 1048617, 27, 0, 1114112, 27, 0, 1114113, 27, 0, 1114114, 27, 0, 1114115, 27, 0, 1114116, 27, 0, 1114117, 27, 0, 1114118, 27, 0, 1114119, 27, 0, 1114120, 27, 0, 1114121, 27, 0, 1114122, 27, 0, 1114123, 27, 0, 1114124, 27, 0, 1114125, 27, 0, 1114126, 27, 0, 1114127, 27, 0, 1114128, 27, 0, 1114129, 27, 0, 1114130, 27, 0, 1114131, 27, 0, 1114132, 27, 0, 1114133, 27, 0, 1114134, 27, 0, 1114135, 27, 0, 1114136, 27, 0, 1114137, 27, 0, 1114138, 27, 0, 1114139, 27, 0, 1114140, 27, 0, 1114141, 27, 0, 1114142, 27, 0, 1114143, 27, 0, 1114144, 27, 0, 1114145, 27, 0, 1114146, 27, 0, 1114147, 27, 0, 1114148, 27, 0, 1114149, 27, 0, 1114150, 27, 0, 1114151, 27, 0, 1114152, 27, 0, 1114153, 27, 0, 1179648, 27, 0, 1179649, 27, 0, 1179650, 27, 0, 1179651, 27, 0, 1179652, 27, 0, 1179653, 27, 0, 1179654, 27, 0, 1179655, 27, 0, 1179656, 27, 0, 1179657, 27, 0, 1179658, 27, 0, 1179659, 27, 0, 1179660, 27, 0, 1179661, 27, 0, 1179662, 27, 0, 1179663, 27, 0, 1179664, 27, 0, 1179665, 27, 0, 1179666, 27, 0, 1179667, 27, 0, 1179668, 27, 0, 1179669, 27, 0, 1179670, 27, 0, 1179671, 27, 0, 1179672, 27, 0, 1179673, 27, 0, 1179674, 27, 0, 1179675, 27, 0, 1179676, 27, 0, 1179677, 27, 0, 1179678, 27, 0, 1179679, 27, 0, 1179680, 27, 0, 1179681, 27, 0, 1179682, 27, 0, 1179683, 27, 0, 1179684, 27, 0, 1179685, 27, 0, 1179686, 27, 0, 1179687, 27, 0, 1179688, 27, 0, 1179689, 27, 0 )

[node name="Player" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
position = Vector2( 32, 352 )
z_index = 1

[node name="Interface" parent="Player" index="0"]
editor/display_folded = false

[node name="Control" parent="Player/Interface" index="0"]
visible = false

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 640, 160 )
shape = SubResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="PopupDialog" parent="." instance=ExtResource( 6 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]

[editable path="Skull"]

[editable path="Player"]

[editable path="Player/Interface"]

[editable path="PopupDialog"]
